chore: keep documentation files local only by adding them to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
 .env
+ALL-FIXED.md
+CACHING-FIX.md
+CONDA-SETUP.md
+FINAL-FIX.md
+GROQ-QUICK-FIX.md
+ISSUE-FIXED.md
+LITELLM-FIX.md
+P-GUIDE.md
+QUICKSTART.md
+READY.md
+START-HERE.md
+WINDOWS-SETUP.md
 
 # Python
 __pycache__/
