docs: consolidate all fix documentation into REPAIR-LOG.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
 .env
-ALL-FIXED.md
-CACHING-FIX.md
+REPAIR-LOG.md
 CONDA-SETUP.md
-FINAL-FIX.md
-GROQ-QUICK-FIX.md
-ISSUE-FIXED.md
-LITELLM-FIX.md
 P-GUIDE.md
 QUICKSTART.md
-READY.md
-START-HERE.md
 WINDOWS-SETUP.md
 
 # Python
